Docker compose except frontend