@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.Test
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.4'
@@ -6,7 +8,6 @@ plugins {
 
 group = 'thi.cnd'
 version = '0.0.1-SNAPSHOT'
-
 
 springBoot {
 	mainClass = 'thi.cnd.authservice.Application'
@@ -35,7 +36,7 @@ subprojects {
 	apply plugin: 'io.spring.dependency-management'
 
 	java {
-		sourceCompatibility = '20'
+		sourceCompatibility = '21'
 	}
 
 	repositories {
@@ -44,7 +45,7 @@ subprojects {
 
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-		implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server:3.1.3'
+		implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
 		//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 		//implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -76,45 +77,19 @@ subprojects {
 		implementation 'javax.annotation:javax.annotation-api:1.3.2'
 		implementation 'org.springframework:spring-webflux:6.0.11'
 		implementation 'org.zalando:jackson-datatype-money:1.3.0'
+
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	}
 
-	tasks.named('test') {
+	test {
 		useJUnitPlatform()
+	}
+	tasks.withType(Test).configureEach {
+		maxParallelForks = 1
 	}
 
 	bootJar {
 		enabled = false
 	}
-
-	tasks.withType(JavaCompile).configureEach {
-		options.compilerArgs += "--enable-preview"
-	}
-
-	tasks.withType(Test).configureEach {
-		jvmArgs += "--enable-preview"
-	}
-
-	tasks.withType(JavaExec).tap {
-		configureEach {
-			jvmArgs += '--enable-preview'
-		}
-	}
 }
 
-tasks.withType(JavaCompile).configureEach {
-	options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test).configureEach {
-	jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec).tap {
-	configureEach {
-		jvmArgs += '--enable-preview'
-	}
-}
-
-test {
-	useJUnitPlatform()
-}
